--- a/src/archilog/views/templates/select.html
+++ b/src/archilog/views/templates/select.html
@@ -11,6 +11,9 @@
     <a href="{{ url_for('create_page') }}">
         <button>Insert new item</button>
     </a>
+    <a href="{{ url_for('csv_page') }}">
+        <button>Import & export CSV</button>
+    </a>
 </header>
 <main role="main">
     <form action="{{ url_for('select_page') }}" method="post">
