--- a/src/archilog/views/templates/csv.html
+++ b/src/archilog/views/templates/csv.html
@@ -16,20 +16,20 @@
 <header role="banner" style="margin-bottom: 20px">
     <h1>archilog</h1>
     <h2>Import & export CSV</h2>
-    <a href="{{ url_for('select_page') }}">
+    <a href="{{ url_for('web_ui.select_page') }}">
         <button>Select items</button>
     </a>
 </header>
 <main role="main">
     <div id="parent-div">
-        <form action="{{ url_for('csv_page') }}" enctype="multipart/form-data" method="post">
+        <form action="{{ url_for('web_ui.csv_page') }}" enctype="multipart/form-data" method="post">
             <label for="csv-import">Import a CSV file</label>
             <input id="csv-import" name="csv-import" type="file" accept="text/csv" required>
 
             <button type="submit">Import</button>
         </form>
 
-        <form action="{{ url_for('csv_page') }}" method="post">
+        <form action="{{ url_for('web_ui.csv_page') }}" method="post">
             <input id="export-submit" name="export-submit" type="checkbox" checked hidden>
 
             <button type="submit">Export</button>
