--- a/src/archilog/views/templates/update.html
+++ b/src/archilog/views/templates/update.html
@@ -8,7 +8,7 @@
 <header role="banner" style="margin-bottom: 20px">
     <h1>archilog</h1>
     <h2>Update items</h2>
-    <a href="{{ url_for('select_page') }}">
+    <a href="{{ url_for('web_ui.select_page') }}">
         <button>Select items</button>
     </a>
 </header>
