Added an authentication on first login and after logging out as well as different roles

--- a/src/archilog/views/templates/select.html
+++ b/src/archilog/views/templates/select.html
@@ -14,6 +14,13 @@
     <a href="{{ url_for('web_ui.csv_page') }}">
         <button>Import & export CSV</button>
     </a>
+    {% if username is defined %}
+    <h3>Welcome {{ username }}</h3>
+    {% endif %}
+
+    <a href="http://log:out@localhost:5000">
+        <button>Log out</button>
+    </a>
 </header>
 <main role="main">
     <form action="{{ url_for('web_ui.select_page') }}" method="post">
